# RecipeApp

./: .gitignore  README.md
app/: .gitignore  README.md  pubspec.yaml
app/android/app/: build.gradle
app/lib/: main.dart
app/lib/recipe/: ingredient.dart  recipe.dart  recipe_header.dart  recipe_page.dart
app/lib/utils/: bouncy_scroll.dart
daily-intake-percent/: Cargo.toml
daily-intake-percent/src/: main.rs  pretty.rs
daily-intake-percent/src/nutrients/: amino_acid.rs  carbs_and_sugars.rs  fatty_acid.rs  macronutrient.rs  mineral.rs  mod.rs  vitamin.rs
server/: .dockerignore  .env.dev  .gitignore  Cargo.toml  Dockerfile  Dockerfile.localprod.server  README.md  docker-compose.dev.yml  docker-compose.localprod.yml  docker-compose.yml
server/actix-api-macros/: Cargo.toml
server/actix-api-macros/src/: attr.rs  attr_macros.rs  get_if_ident.rs  lib.rs  parser.rs  response.rs  statuscode.rs  variant.rs
server/actix-api-macros/tests/: compiles.rs  simple_example.rs
server/src/: envvar.rs  macros.rs  main.rs
server/src/api/: apires.rs  mod.rs  world.rs
server/src/v1/: index.rs  mod.rs  recipe.rs  recipe_basic.rs
server/src/v1/recipe/: get.rs  get_basic.rs  get_short.rs  mod.rs  post.rs  weekly.rs
server/src/v1/search/: mod.rs  search.rs
server/src/v1/types/: basic_recipe.rs  date.rs  formattable.rs  gradient.rs  mod.rs  nutrient.rs  recipe.rs  url.rs  uuid.rs
server/src/v1/types/database/: method.rs  method_panes.rs  method_tabs.rs  mod.rs  quiz.rs  recipe.rs
server/src/v1/utils/: auth_user.rs  collection.rs  id_error.rs  mod.rs  weekly.rs
web/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json
web/src/: app.css  global.d.ts
web/src/faked/: BasicRecipe.ts  random.ts
web/src/lib/: GradientBackground.svelte  PageError.svelte
web/src/lib/footer/: Footer.svelte
web/src/routes/: __layout.svelte  index.svelte
web/src/store/: bookmarks.ts  level.ts  localStorage.ts  ratings.ts
web/src/types/: BasicRecipe.ts  Recipe.ts  date.ts  formattable.ts  gradient.ts  index.ts  method.ts  nutrient.ts  quiz.ts  uuid.ts
web/src/utils/: cooldown.ts  easing.ts  fetch.ts
web/tests/: test.ts
(+34 files in other folders)
