[package]
name = "recipe-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web= "4.0.1"
serde_json = "1.0.81"
clap = "3.2.6"
dotenv = "0.15.0"
mongodb = "2.2.2"
chrono = "0.4.19"
tracing = "0.1"
tracing-subscriber = "0.3.11"

[dependencies.actix-api-macros]
version = "=0.1.0"
path = "actix-api-macros"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.tracing]
version = "0.1"
features = [
    "max_level_trace",
    "release_max_level_warn"
]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
