[package]
name = "actix-api-macros"
version = "0.1.0"
description = "Simple macros for an enum-based API for Actix-Web"
authors = ["EDoosh <edoosh.yt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
actix-web = "4.0.1"
proc-macro2 = "1.0.38"
quote = "1.0.18"
serde_json = "1.0.81"
syn = { version = "1.0.94", features = ["extra-traits"] }
